syntax = "proto3";

package test;

option go_package = "github.com/DarioRoman01/grpc;testpb";

message Test {
  string id = 1;
  string name = 2;
}

message GetTestRequest {
  string id = 1;
}

message SeTestResponse {
  string id = 1;
  string name = 2;
}

service TestService {
    rpc GetTest(GetTestRequest) returns (Test);
    rpc SetTest(Test) returns (SeTestResponse);
}
